bug fix for footer width causing the page to have horizontal scroll bars

--- a/web/src/components/footer/Footer.css
+++ b/web/src/components/footer/Footer.css
@@ -4,9 +4,9 @@
     line-height: 60px;
     /* background-color: red; */
     background-color: white;
-    width: 100vw;
+    width: 100%;
     border-top: 1px solid rgb(235, 235, 235);
-    
+
 }
 .footer-content{
     text-align: center;
